--- a/Game.html
+++ b/Game.html
@@ -7,7 +7,7 @@
     <script type="importmap">
         {
         "imports": {
-        "three": "/three.module.js"
+        "three": "three.module.js"
         }
         }
     </script>
