--- a/Game.html
+++ b/Game.html
@@ -20,14 +20,15 @@
             const element = document.createElement('title');
             element.innerHTML = name;
             document.head.appendChild(element);
-            let script = document.createElement('script');
-            script.type = "module";
-            script.src = info.Main;
-            script.defer = true;
-            document.head.appendChild(script);
+            //let script = document.createElement('script');
+            //script.type = "module";
+            //script.src = info.Main;
+            //script.defer = true;
+            //document.head.appendChild(script);
         }
         initT();
     </script>
+    <script src="src/Main.js type="module">
     <style>
         html,
         body {
