--- a/Game.html
+++ b/Game.html
@@ -28,7 +28,7 @@
         }
         initT();
     </script>
-    <script src="src/Main.js" type="module">
+    <script src="src/Main.js" type="module"></script>
     <style>
         html,
         body {
